--- a/main.html
+++ b/main.html
@@ -33,8 +33,8 @@
 	</div>
 		
 	<div>
-		<input data-ns-test="block-inline-input">test 1</input>
-		<input data-ns-test="block-inline-input">test 2</input>
+		<input data-ns-test="block-inline-input" value="test 1">
+		<input data-ns-test="block-inline-input" value="test 2">
 	    Answer: Inline
 	   </div>
 	    
